--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <link rel="icon" type="image/png" href="file:///D:/WIKI/slide1.png">
+  <link rel="icon" type="image/png" href="https://raw.githubusercontent.com/GeoProductions/tommywiki/refs/heads/main/Slide1.PNG">
   <title>Tommy Wiki</title>
   <style>
     body {
