--- a/index.html
+++ b/index.html
@@ -43,7 +43,8 @@
 <body>
   <div class="iframe-container">
     <div class="background-box"></div>
-    <iframe src="https://geoproductions.github.io/tommy_wiki/" title="Tommy Wiki"></iframe>
+    <iframe src="https://geoplus.site/tw" title="Tommy Wiki"></iframe>
   </div>
 </body>
 </html>
+
