--- a/index.html
+++ b/index.html
@@ -43,8 +43,9 @@
 <body>
   <div class="iframe-container">
     <div class="background-box"></div>
-    <iframe src="https://geoplus.site/tw" title="Tommy Wiki"></iframe>
+    <iframe src="https://geoproductions.github.io/Tommy-WIki-Beta-2.1/index.html" title="Tommy Wiki"></iframe>
   </div>
 </body>
 </html>
+
 
