--- a/index.html
+++ b/index.html
@@ -3,6 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <link rel="icon" type="image/png" href="https://raw.githubusercontent.com/GeoProductions/tommywiki/refs/heads/main/Slide1.PNG">
+  # Source - https://stackoverflow.com/a
+# Posted by Vinci
+# Retrieved 2026-01-03, License - CC BY-SA 4.0
+
+ <link rel="icon" href="data:,">
+
   <title>Tommy Wiki</title>
   <style>
     body {
@@ -47,5 +53,6 @@
   </div>
 </body>
 </html>
+
 
 
